# ai-titan

./: .env.example  GLOBAL_USAGE.md  README.md  SETUP_AGENT.bat  SETUP_AGENT.ps1  Secrets.env  example_usage.py  install.bat  install.py  package-lock.json  package.json  pyproject.toml  quick_start.py  setup.bat  setup_global_agent.py
ai_titan/: __init__.py
ai_titan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app-builder-backend/: .env  README.md  agent.js  db.js  deepseek.js  img2code-setup.md  img2code_integration.js  index.js  package-lock.json  package.json  project.model.js  test-deepseek.js  user.model.js
app-builder-frontend/: AGENT_USAGE.md  App.js  AppBuilder.js  AppBuilder.jsx  ExportButton.js  ImageUploader.js  README.md  agent.bat  agent.ps1  agent.py  api.js  download.js  eslint.config.js  index.html  index.js  package-lock.json  package.json  run_agent.py  theme.css
app-builder-frontend/public/: index.html  manifest.json  site.webmanifest
app-builder-frontend/src/: App.js  App.jsx  AppBuilder.jsx  Auth.css  Auth.js  ProjectManager.css  ProjectManager.js  api.js  main.jsx  supabaseClient.js
tools/: agent-runner.js
tools/agents/: backendSmokeAgent.js  frontendBuildAgent.js  frontendLintAgent.js  repoAuditAgent.js  utils.js
vscode-extension/: .vscodeignore  ICON_GUIDE.md  LICENSE  MARKETPLACE_GUIDE.md  README.md  agent-rules.json  ai-titan-deepseek-agent-1.0.0.vsix  build-vsix.js  build-vsix.ps1  pricing-config.json  tsconfig.json
vscode-extension/open-vsx-distribution/: CHANGELOG.md  DISTRIBUTION_README.md  (+4 more)
(+22 files in other folders)
